--- a/Forum/static/Forum/style.css
+++ b/Forum/static/Forum/style.css
@@ -1,7 +1,31 @@
-li a {
-    color: D60F0F;
+a {
+color: green;
+}
+body {
+    background: white url("images/background.gif") no-repeat;
+    background-position: 1100px 650px; ;
+}
+legend, fieldset, abcd { 
+    border:1px solid black;
+    border-radius: 10px; 
+}
+abcd {
+    font-weight:bold
 }
 
-body {
-    background: white url("images/background.gif") no-repeat center;
+input[type=button] {
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+	border: 2px solid #6495ED;
+	background-color: #BCD2EE;
+	height: 50px;
+	width: 120px;
+	margin: auto;
+	text-align: center;
+	text-decoration: none;
+	font-weight:bold
 }
+
